// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches withColouredError snapshot: with coloured error mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  margin-top: 0;
  padding: 5px;
  border: 2px solid #0b0c0c;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 4px solid #f47738;
  margin-bottom: 0;
}

@media print {
  .emotion-1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.emotion-1::-webkit-outer-spin-button,
.emotion-1::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.emotion-1[type="number"] {
  -moz-appearance: textfield;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc
  error="example"
  errorColor="#f47738"
  type="text"
>
  <Input
    className="emotion-3 emotion-0"
    error="example"
    errorColor="#f47738"
    type="text"
  >
    <StyledInput
      className="emotion-3 emotion-0"
      error="example"
      errorColor="#f47738"
      type="text"
    >
      <input
        className="emotion-0 emotion-1 emotion-2"
        type="text"
      />
    </StyledInput>
  </Input>
</StyledHoc>
`;

exports[`Input matches withError snapshot: with error mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  margin-top: 0;
  padding: 5px;
  border: 2px solid #0b0c0c;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 4px solid #b10e1e;
  margin-bottom: 0;
}

@media print {
  .emotion-1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.emotion-1::-webkit-outer-spin-button,
.emotion-1::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.emotion-1[type="number"] {
  -moz-appearance: textfield;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc
  error="example"
  type="text"
>
  <Input
    className="emotion-3 emotion-0"
    error="example"
    type="text"
  >
    <StyledInput
      className="emotion-3 emotion-0"
      error="example"
      type="text"
    >
      <input
        className="emotion-0 emotion-1 emotion-2"
        type="text"
      />
    </StyledInput>
  </Input>
</StyledHoc>
`;

exports[`Input matches wrapper snapshot: wrapper mount 1`] = `
.emotion-3 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  margin-top: 0;
  padding: 5px;
  border: 2px solid #0b0c0c;
  border-radius: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin-bottom: 0;
}

@media print {
  .emotion-1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.emotion-1::-webkit-outer-spin-button,
.emotion-1::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.emotion-1[type="number"] {
  -moz-appearance: textfield;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

<StyledHoc
  type="text"
>
  <Input
    className="emotion-3 emotion-0"
    type="text"
  >
    <StyledInput
      className="emotion-3 emotion-0"
      type="text"
    >
      <input
        className="emotion-0 emotion-1 emotion-2"
        type="text"
      />
    </StyledInput>
  </Input>
</StyledHoc>
`;
